[package]
name = "sar-blog"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web =  "3.3.0"
actix-http = "2.2.0"
serde = "1.0.123"
serde_json = "1.0.61"
env_logger = "0.8.2"
futures-util = "0.3.12"
futures = "0.3.8"
log = "0.4.14"
chrono = "0.4.19"
time_crate = { version = "0.2.25", package = "time" }
sar_blog = { path = "./sar_blog" }
options = { path = "./options" }
clap = "3.0.0-beta.2"