[package]
name = "sar-blog"
version = "1.0.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web =  "4.0.1"
actix-http = "3.0.4"
actix-files = "0.6.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.123"
serde_json = "1.0.61"
env_logger = "0.9.0"
futures-util = "0.3.12"
futures = "0.3.21"
log = "0.4.14"
chrono = "0.4.19"
time_crate = { version = "0.3.9", package = "time" }
sar_blog = { path = "./sar_blog" }
shared = { path = "./shared" }
clap = "3.0.0-beta.2"
actix-web-httpauth = "0.8.1"
rss = { version = "2.0.11", features = ["atom"] }

[workspace]
members = [
    "./model",
    "./sar_blog",
    "./shared"
]