[package]
name = "data_migration"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "20.1.0"
model = { path = "../model" }
env_logger = "0.8.2"
log = "0.4.14"
serde = "1.0.123"
shared = { path = "../shared" }
url = "2.2.0"
tokio = { version = "0.2.24", features = ["stream", "full"] }
email-address-parser = "1.0.0"
regex = "1.5.5"
chrono-tz = "0.5.3"
mongodb = "1.1.0"
futures-util = "0.3.12"