[package]
name = "model"
version = "1.0.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
mongodb = "1.1.0"
chrono = "0.4.19"
tokio = { version = "0.2.24", features = ["stream", "full"] }
serde = "1.0.123"
redis = { version = "0.17.0", features = ["connection-manager", "tokio-comp"]}
md5 = "0.7.0"
paste = "1.0"
futures-util = "0.3.12"
log = "0.4.14"
reqwest = { version = "0.10.10", features = ["rustls", "json"] }