[package]
name = "model"
version = "1.0.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
mongodb = { version = "2.1.0", features = ["bson-chrono-0_4"]}
chrono = "0.4.19"
tokio = { version = "1.17.0" }
serde = "1.0.123"
serde_json = "1.0.61"
redis = { version = "0.21.5", features = ["connection-manager", "tokio-comp"]}
md5 = "0.7.0"
paste = "1.0"
futures-util = "0.3.12"
log = "0.4.14"
reqwest = { version = "0.11.10", features = ["rustls", "json"] }
url = "2.2.2"
futures = "0.3.21"