[package]
name = "sar_blog"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
serde = "1.0.123"
pulldown-cmark = "0.8.0"
chrono = "0.4.19"
sha2 = "0.9.3"
options = { path = "../options" }