[package]
name = "sar_blog"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
serde = "1.0.123"
pulldown-cmark = "0.8.0"
chrono = "0.4.19"
sha2 = "0.9.3"
options = { path = "../options" }
rand = { version = "0.8.3", features = ["std_rng"] }
hex = "0.4.2"
log = "0.4.14"
regex = "1.4.3"
lazy_static = "1.4.0"
email-address-parser = "1.0.0"
url = "2.2.0"
sha1 = "0.6.0"
md5 = "0.7.0"