[package]
name = "sar_blog"
version = "1.0.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
reqwest = { version = "0.11.10", features = ["rustls", "json"] }
serde = "1"
serde_json = "1"
pulldown-cmark = "0.9.1"
chrono = "0.4.19"
sha2 = "0.10.2"
shared = { path = "../shared" }
rand = { version = "0.8.3", features = ["std_rng"] }
hex = "0.4.2"
log = "0.4.14"
regex = "1.4.3"
lazy_static = "1.4.0"
email-address-parser = "1.0.0"
url = "2.2.0"
sha1 = "0.10.1"
md5 = "0.7.0"
base64 = "0.13.0"
hmac-sha1 = "0.1.3"
async-trait = "0.1.50"